# syn-mid

./: .deny.toml  .git-blame-ignore-revs  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml
ci/: azure-test.yml
examples/const_fn/: Cargo.toml  lib.rs
examples/const_fn/src/: lib.rs
examples/const_fn/tests/: test.rs
examples/const_fn_test/: Cargo.toml  build.rs
examples/const_fn_test/tests/: test.rs
src/: arg.rs  expr.rs  func.rs  item.rs  lib.rs  macros.rs  pat.rs  path.rs  print.rs  tt.rs
