[package]
name = "syn-mid"
version = "0.5.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/syn-mid"
homepage = "https://github.com/taiki-e/syn-mid"
documentation = "https://docs.rs/syn-mid"
keywords = ["syn", "macros"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
description = """
Providing the features between \"full\" and \"derive\" of syn.
"""

[workspace]
members = ["examples/const_fn", "examples/const_fn_test"]

[features]
clone-impls = ["syn/clone-impls"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.5", default-features = false, features = ["parsing", "printing", "derive"] }
