[package]
name = "syn-mid"
version = "0.5.3"
edition = "2018"
rust-version = "1.31"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/syn-mid"
keywords = ["syn", "macros"]
categories = ["development-tools::procedural-macro-helpers"]
exclude = ["/.*", "/tools"]
description = """
Providing the features between \"full\" and \"derive\" of syn.
"""

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["examples/const_fn"]

[lib]
doc-scrape-examples = false

[features]
clone-impls = ["syn/clone-impls"]

# Note: proc-macro2, quote, and syn are public dependencies.
[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2.0.5", default-features = false, features = ["parsing", "printing", "derive"] }
