[package]
name = "const_fn"
version = "0.0.0"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2 = "0.4.19"
quote = "0.6.8"
syn = "0.15.22"
syn-mid = { version = "0.3", path = "../..", features = ["clone-impls"] }
